@@ -834,6 +834,20 @@ static inline void xnarch_stop_timer (void) {
     rthal_release_timer();
 }
 
+static inline void xnarch_read_timings (unsigned long long *shot,
+					unsigned long long *delivery,
+					unsigned long long defval)
+{
+#ifdef CONFIG_ADEOS_PROFILING
+    int cpuid = adeos_processor_id();
+    *shot = __adeos_profile_data[cpuid].irqs[__adeos_tick_irq].t_handled;
+    *delivery = __adeos_profile_data[cpuid].irqs[__adeos_tick_irq].t_synced;
+#else /* !CONFIG_ADEOS_PROFILING */
+    *shot = defval;
+    *delivery = defval;
+#endif /* CONFIG_ADEOS_PROFILING */
+}
+
 #endif /* XENO_TIMER_MODULE */
 
 #ifdef XENO_MAIN_MODULE
