@@ -61,6 +61,8 @@ typedef long long xnstime_t;
 
 #ifdef CONFIG_RTAI_OPT_TIMESTAMPS
 typedef struct xntimes {
+    xnticks_t tick_shot;
+    xnticks_t tick_delivery;
     xnticks_t timer_entry;
     xnticks_t timer_handler;
     xnticks_t timer_handled;
