@@ -362,6 +362,14 @@ static inline void xnarch_stop_timer (void) {
     mvm_stop_timer();
 }
 
+static inline void xnarch_read_timings (unsigned long long *shot,
+					unsigned long long *delivery,
+					unsigned long long defval)
+{
+    *shot = defval;
+    *delivery = defval;
+}
+
 #endif /* XENO_TIMER_MODULE */
 
 #ifdef XENO_MAIN_MODULE
